# Examwork

./: .gitignore  LICENSE.md  README.md  vcpkg.json
.github/workflows/: codeql.yml  main.yml  release.yml
Markedit/: CMakeLists.txt  barNotesHandle.cpp  barOutlineHandle.cpp  barSettingsHandle.cpp  highlighter.cpp  highlighter.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  menuEditHandle.cpp  menuFileHandle.cpp  statusBar.cpp  statusBarHandle.cpp  vcpkg.json
Markedit/translations/: en_US.ts  zh_CN.ts
